app/src/main/java/com/example/bookclub/errors/study/studycomment/StudyCommentContentNotExistedException.java
package com.example.bookclub.errors.study.studycomment;

public class StudyCommentContentNotExistedException extends RuntimeException {
	public StudyCommentContentNotExistedException() {
		super("StudyComment Not Existed");
	}
}
